--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -16,9 +16,10 @@
 <body>
     {% include 'events/navbar.html' %}
     <br />
-    {% block content %}
-
-    {% endblock %}
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
