--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -12,7 +12,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'list-events' %}">Events</a>
+                    <a class="nav-link" href="{% url 'add-venue' %}">Events</a>
                 </li>
             </ul>
             <form class="d-flex">
