--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -6,6 +6,7 @@
     <br />
 {% for event in event_list %}
 
+{% comment %} CARD {% endcomment %}
 <div class="card">
     <div class="card-header">
         <li>{{ event }}</li>
@@ -29,7 +30,7 @@
         </p>
     </div>
 </div>
-
+{% comment %} END_CARD {% endcomment %}
 
     <br />
 {% endfor %}
