--- a/events/templates/events/venue.html
+++ b/events/templates/events/venue.html
@@ -1,15 +1,17 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
-<center>
-    <h1>Hello {{ first_name }}! Events for {{ month }}
 
-        {{ year }}</h1>
+    <h1>Venues...</h1>
+<br />
+<table class='table table-striped table-hover table-bordered'>
+    {% for venue in venue_list %}
+        <tr>
+            <td>
+                <a href="{% url 'show-venue' venue.id %}">{{ venue }} </a><br />
+            </td>
+        </tr>
+    {% endfor %}  
+</table>
 
-    As of {{ time }}
-    <br /><br />
-    {{ cal | safe }}
-    <br /><br /><br /><br />
-    Copyright (c) {{ current_year }}
-</center>
 {% endblock %}
