--- a/events/templates/events/venue.html
+++ b/events/templates/events/venue.html
@@ -10,6 +10,9 @@
             <td>
                 <a href="{% url 'show-venue' venue.id %}">{{ venue }} </a><br />
             </td>
+            <td align="right">
+                <a href="{% url 'update-venue' venue.id %}">Update</a>
+            </td>
         </tr>
     {% endfor %}  
 </table>
