--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -16,6 +16,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add-event' %}">Add Event</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'list-venues' %}">Venues</a>
                 </li>
             </ul>
