--- a/events/templates/events/venue.html
+++ b/events/templates/events/venue.html
@@ -11,7 +11,7 @@
                 <a href="{% url 'show-venue' venue.id %}">{{ venue }} </a><br />
             </td>
             <td align="right">
-                <a href="{% url 'update-venue' venue.id %}">Update</a>
+                <a href="{% url 'update-venue' venue.id %}" class="btn btn-outline-secondary btn-sm">Update</a>
             </td>
         </tr>
     {% endfor %}  
