--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -28,10 +28,18 @@
                     </ul>
                 </p>
             </div>
+              <div class="card-footer text-muted">
+                  <a href="{% url 'update-event' event.id %}"
+                    class="btn btn-outline-secondary btn-sm">Update Event</a>
+
+                  <a href="{% url 'delete-event' event.id %}" class="btn btn-outline-danger btn-sm">Delete Event</a>
+              </div>
         </div>
 
-            <br />
+            <br /> <br/ >
 {% endfor %}
 
 
 {% endblock %}
+
+
