--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -12,7 +12,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'add-venue' %}">Events</a>
+                    <a class="nav-link" href="{% url 'event-list' %}">Events</a>
                 </li>
 
                 <li class="nav-item">
