--- a/events/templates/events/update_event.html
+++ b/events/templates/events/update_event.html
@@ -1,11 +1,11 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
-    <h1>Update Venue</h1>
+    <h1>Update Event</h1>
     <br />
     <form action="" method=POST>
         {% csrf_token %}
-    {{ form.as_p }}
-    <br/>
-    <input type="submit" value="Update 2" class="btn btn-secondary">
+        {{ form.as_p }}
+        <br />
+        <input type="submit" value="Update" class="btn btn-secondary">
 {% endblock %}
