--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -8,7 +8,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' '2021' 'March' %}">March</a>
+                    <a class="nav-link" href="{% url 'about-us' %}">About Us</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' '2021' 'March' %}">Choose Your Month</a>
                 </li>
 
                 <li class="nav-item">
