--- a/events/templates/events/about_us.html
+++ b/events/templates/events/about_us.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% load static %}
-ódi{}<link href="{% static 'styles.css' %}" rel="stylesheet" />
+<link href="{% static 'styles.css' %}" rel="stylesheet" />
     <center>
         <h1>About US</h1>
 
