--- a/events/templates/events/search_venues.html
+++ b/events/templates/events/search_venues.html
@@ -6,7 +6,7 @@
         <h1>You Searched {{ searched }}</h1>
         <br />
         {% for venue in venues %}
-            <a href="{% url 'show-venue' venue.id %}">{{ venue }} </a><br />´{{''}}
+            <a href="{% url 'show-venue' venue.id %}">{{ venue }} </a><br />{{''}}
         {% endfor %}
     {% else %}
         <h1>Hey! You Forgot To Search For A Venue!</h1>
