--- a/events/templates/events/show_venue.html
+++ b/events/templates/events/show_venue.html
@@ -4,7 +4,7 @@
 {% comment %} CARD {% endcomment %}
 <center>
     <h1> {{ venue }}</h1>
-    <br/>f
+    <br/>
         {{ venue.address }}<br />
         {{ venue.zip_code }}<br />
         {{ venue.phone }}<br />
@@ -13,4 +13,10 @@
 
 {% comment %} END_CARD {% endcomment %}
 </center>
+{% if venue.venue_image %}
+<br />
+<center>
+    <img src="{{ venue.venue_image.url }}" width=500>
+</center>
+{% endif %}
 {% endblock %}
