--- a/events/templates/events/add_venue.html
+++ b/events/templates/events/add_venue.html
@@ -7,7 +7,7 @@
     {% if submitted %} 
         Your Venue Was Submitted Succesfully
     {% else %}
-    <form action="" method=POST>
+    <form action="" method=POST enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit" class="btn btn-secondary">
