--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -24,6 +24,10 @@
                 </li>
 
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'add-venue' %}">Add Venue</a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'list-venues' %}">Venues</a>
                 </li>
 
