--- a/events/templates/events/navbar.html
+++ b/events/templates/events/navbar.html
@@ -26,6 +26,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'list-venues' %}">Venues</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'messages' %}">Chat</a>
+                </li>
             </ul>
             <form class="d-flex" method=POST action={% url 'search-venues' %}>
                 {% csrf_token %}
