about_us Ingreso Matias

--- a/events/templates/events/about_us.html
+++ b/events/templates/events/about_us.html
@@ -17,7 +17,9 @@
                             Python and Django.</p>
                         </p>
                         <br />
-                        <p>Matías Moreno is...</p>
+                        <p>Matías Moreno is a Industrial Engineerwho is exploring the world of programming. He is starting
+                            with the languages of python and C # to see if in the future what branch of work he wants to 
+                            dedicate himself to.</p>
                     </div>
                     <div class="col-lg-6 d-none d-lg-block"><img
                             src="https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/thumbnails/image/event%20icon.jpg"
